text is now only justified in tablet viewports and larger to avoid awkward word spacings. Content panel width is now specified as a percentage in smaller viewports.

--- a/app/components/scss/_partialcommon.scss
+++ b/app/components/scss/_partialcommon.scss
@@ -3,11 +3,11 @@
     @include center;
 
     margin-bottom:40px;
-    width:440px;
+    width:85%;
 
-    @include mini {
-        width:320px;
-    }
+     @include tablet {
+         width:450px;
+     }
 
     @include jumbo {
         width:550px;
@@ -33,7 +33,11 @@ section:not(:first-child) {
     font-size: 1.1em;
     letter-spacing:0.03em;
     line-height:1.5em;
-    text-align:justify;
+    text-align:left;
+
+    @include tablet {
+        text-align: justify;
+    }
 }
 
 .inner-page-list {
